Added weather-app.html and styles for that page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>CS 355 Home Page</title>
+    <head>
+        <title>Eli's Webpage</title>
+    </head>
 <body>
-<h1>This is my home page for CS 355</h1>
-<p>The temp website for ES</p>
+    <h1>Welcome to a temp webpage</h1>
+    <p>This is a temporary webpage for Eli's CS355 class.</p>
+    <p><a href="./weather-app.html">Click here to go to the weather-app</a></p>
 </body>
 </html>
