--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Welcome to a temp webpage</h1>
     <p>This is a temporary webpage for Eli's CS355 class.</p>
-    <p><a href="./weather-app.html">Click here to go to the weather-app</a></p>
+    <p><a href="weather-app.html">Click here to go to the weather-app</a></p>
 </body>
 </html>
