--- a/projects/html/weather-app.html
+++ b/projects/html/weather-app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather App</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/weatherapp-styles.css">
 </head>
 <body>
     <div class="container">
