Added typing test website from linkedin learning

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     <a class="btn" href="LL3/aboutme.html">Click Here</a>
                 </div>
 
+                <div class="project-item">
+                    <img src="images/typingtest.png" alt="picture of current portfolio website">
+                    <p>A typing test website based on a LinkedIn Learning for JavaScript</p>
+                    <a class="btn" href="projects/html/typing-test.html">Click Here</a>
+                </div>
+
             </div>
         </section>
 
