--- a/projects/html/weather-app.html
+++ b/projects/html/weather-app.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <title>Weather App</title>
     <link rel="stylesheet" href="../css/weatherapp-styles.css">
+    <script src="../JS/jquery-3.6.0.min.js"></script>
+    <script src="../JS/weather-app.js"></script>
 </head>
 <body>
     <div class="container">
-        <h2 id="city">Queens</h2>
+        <h2 id="city"></h2>
         <div class="middle">
             <img id="icon" src="" alt="icon">
             <div class="degrees">
-                <h1 id="temp">19</h1>
+                <h1 id="temp"></h1>
                 <span>&#176;</span>
             </div>
-            <h3 id="desc">Sunny</h3>
+            <h3 id="desc"></h3>
         </div>
     </div>
 </body>
