--- a/projects/html/weather-app.html
+++ b/projects/html/weather-app.html
@@ -16,7 +16,10 @@
                 <h1 id="temp"></h1>
                 <span>&#176;</span>
             </div>
-            <h3 id="desc"></h3>
+            <h3 id="desc"></h3><br>
+            <h3 id="humd"></h3><br>
+            <h3 id="wind"></h3>
+            
         </div>
     </div>
 </body>
