--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                     <p>Testing is done using Jasmine</p>
                     <a class="btn" href="#">Click Here Soon</a>
                 </div>
+                
+                <div class="project-item">
+                    <img src="images/repl-boilerplate-express.png" alt="picture of current portfolio website">
+                    <p>Free Code Camp demo on working with Node.js and Express. Hosted on Repl.it</p>
+                    <p>Additional website paths include, /now, /:word/echo, /name?first=&last=, /json</p>
+                    <a class="btn" href="https://boilerplate-express-1.eliszafranski.repl.co/">Click Here</a>
+                </div>
+                
 
             </div>
         </section>
