--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <img src="images/chat-system.png" alt="picture of current portfolio website">
                     <p>A Node.js and Express powered chat website which stores chats using MongoDB and pushes new chats using socket.io</p>
                     <p>Testing is done using Jasmine</p>
-                    <a class="btn" href="#">Click Here Soon</a>
+                    <a class="btn" href="https://Webchat.eliszafranski.repl.co">Click Here</a>
                 </div>
                 
                 <div class="project-item">
