Added Mongodb and Mongoose practice website

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
                     <a class="btn" href="https://boilerplate-express-1.eliszafranski.repl.co/">Click Here</a>
                 </div>
                 
+                <div class="project-item">
+                    <img src="images/MongooseAndMongoDB.png" alt="picture of Mongoose and Mongodb">
+                    <p>Free Code Camp demo on working with MongoDB and Mongoose. Hosted on Repl.it</p>
+                    <a class="btn" href="https://boilerplate-mongomongoose.eliszafranski.repl.co">Click Here</a>
+                </div>
+                
 
             </div>
         </section>
