fcc projects added

--- a/index.html
+++ b/index.html
@@ -51,10 +51,44 @@
                 
                 <div class="project-item">
                     <img src="images/MongooseAndMongoDB.png" alt="picture of Mongoose and Mongodb">
-                    <p>Free Code Camp demo on working with MongoDB and Mongoose. Hosted on Repl.it</p>
+                    <p>FreeCodeCamp demo on working with MongoDB and Mongoose. Hosted on Repl.it</p>
                     <a class="btn" href="https://boilerplate-mongomongoose.eliszafranski.repl.co">Click Here</a>
                 </div>
+
+                <div class="project-item">
+                    <img src="images/timestamp-microservice.png" alt="timestamp">
+                    <p>FreeCodeCamp timestamp-microservice project. Converts Unix timestamp to GMT time, and vice versa while validating input
+                    </p>
+                    <a class="btn" href="https://boilerplate-project-timestamp.eliszafranski.repl.co">Click Here</a>
+                </div>
+
+                <div class="project-item">
+                    <img src="images/head-parser.png" alt="timestamp">
+                    <p>FreeCodeCamp head-parser project. Returns info recieved from client requests</p>
+                    <a class="btn" href="https://boilerplate-project-headerparser.eliszafranski.repl.co">Click Here</a>
+                </div>
                 
+                <div class="project-item">
+                    <img src="images/exercise-tracker.png" alt="timestamp">
+                    <p>FreeCodeCamp exercise-tracker project. Tracks specific users and their workouts using MongoDB
+                        Allows for passing of filtering variables in the URL
+                    </p>
+                    <a class="btn" href="https://boilerplate-project-exercisetracker.eliszafranski.repl.co">Click Here</a>
+                </div>
+
+                <div class="project-item">
+                    <img src="images/file-metada.png" alt="timestamp">
+                    <p>FreeCodeCamp file-metadata project. Returns metadata about an uploaded file</p>
+                    <a class="btn" href="https://boilerplate-project-filemetadata.eliszafranski.repl.co">Click Here</a>
+                </div>
+
+                <div class="project-item">
+                    <img src="images/url-shortener.png" alt="timestamp">
+                    <p>FreeCodeCamp url-shortener project. Stores url and shortned versions in MongoDB.
+                        Users can access original website using shortened URL
+                    </p>
+                    <a class="btn" href="https://boilerplate-project-urlshortener.eliszafranski.repl.co">Click Here</a>
+                </div>
 
             </div>
         </section>
