--- a/LL3/aboutme.html
+++ b/LL3/aboutme.html
@@ -42,14 +42,14 @@
       <section class="work-exp">
         <div class="content-wrap item-details divider">
           <h2>Work Experience</h2>
-          <p>Optional paragraph for work experience summary. Not a part of the job details. Delete if not being used.</p>
+          <p>I have worked in various postions across the full spectrum of Computer Science</p>
 
           <!-- Copy this whole <section> block to add more jobs. -->
           <section class="job-item">
             <div class="job-details">
-              <h3>Job title</h3>
-              <p>Company Name</p>
-              <p>Date at job</p>
+              <h3>Software Engineer Intern/Data Analytics Consultant</h3>
+              <p>Sestra Systems</p>
+              <p>June 2020-Jan 2021</p>
             </div>
             <div class="job-summary">
               <p>Job summary goes here. Add as many paragraphs as you need.</p>
