--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
             <div class="content-wrap">
 
                 <div class="project-item">
+                    <img src="images/qcfirst.png" alt="Term Project">
+                    <p>A Noje.js course enrolment app, created for a Term Project.</p>
+                    <a class="btn" href="https://qcfirst.355project.repl.co/" target="_blank">Click Here for Live Website</a>
+                    <a class="btn" href="https://github.com/JuZNyC/qcfirst" target="_blank">Click Here for GitHub Repo</a>
+                </div>
+
+                <div class="project-item">
                     <img src="images/weather-app.png" alt="picture of current weatherapp iteration">
-                    <p>A weather-app (work in progress)</p>
+                    <p>A weather-app (location services must be enabled)</p>
                     <a class="btn" href="projects/html/weather-app.html" target="_blank">Click Here</a>
                 </div>
 
@@ -47,6 +54,12 @@
                     <p>A Node.js and Express powered chat website which stores chats using MongoDB and pushes new chats using socket.io</p>
                     <p>Testing is done using Jasmine</p>
                     <a class="btn" href="https://Webchat.eliszafranski.repl.co" target="_blank">Click Here</a>
+                </div>
+
+                <div class="project-item">
+                    <img src="images/shopper.png" alt="picture of shopper">
+                    <p>A Node.js and Express powered shopping website. Stores users with MongoDB, sessions and session baskets with Redis, and orders with MySQL</p>
+                    <a class="btn" href="https://github.com/EliSzafranski/LL-Shopper/blob/main/README.md" target="_blank">Click Here</a>
                 </div>
                 
                 <div class="project-item">
@@ -117,11 +130,12 @@
                 <p>Responsibliites Included:</p>
                 <ul>
                     <li>Creating weekly engaging lectures for students</li>
-                    <li>Demoing live pentesting and other related topics</li>
+                    <li>Demonstrating live pentesting and other related topics</li>
                     <li>Meeting with students one-on-one to work with them to fully master the material</li>
                 </ul>
                 </div>
             </section>
+
             <section class="job-item">
                 <div class="job-details">
                 <h3>Software Engineer Intern/Data Analytics Consultant</h3>
@@ -129,15 +143,20 @@
                 <p>June 2020 - Jan 2021</p>
                 </div>
                 <div class="job-summary">
-                <p>Wrote patches, scripts and updates to allow deployment and running of old C++ code repository on newest versions of Linux operating systems.
-                    Developed analytics scripts to detect issues with devices allowing for quick alerts to engineering team and customers</p>
-                <!-- <p>Optional list:</p>
-                <ul>
-                    <li>Delete this list if you don't need it.</li>
-                    <li>Created...</li>
-                    <li>Lead...</li>
-                    <li>Responsible for...</li>
-                </ul> -->
+                    <p>Wrote patches, scripts and updates to allow deployment and running of old C++ code repository on newest versions of Linux operating systems.
+                    <br>Developed analytics scripts to detect issues with devices allowing for quick alerts to engineering team and customers.
+                    <br>Recieved return offer to continue analyzing data and devopoing monitoring scripts using Python and PostgreSQL.</p>
+                </div>
+            </section>
+
+            <section class="job-item">
+                <div class="job-details">
+                <h3>Computer Science Tutor</h3>
+                <p>Queens College Computer Science Department</p>
+                <p>Jan 2020 - March 2020</p>
+                </div>
+                <div class="job-summary">
+                    <p>Helped develop students’ core computer science skills including computational logic, as well as recursion and object-oriented programming in Java and C++</p>
                 </div>
             </section>
             <!-- End of Job block. -->
@@ -145,7 +164,7 @@
         </section>
 
         <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-        <section class="education">
+        <section class="education" id="job-section">
             <div class="content-wrap item-details">
                 <h2>Education</h2>
 
@@ -153,7 +172,7 @@
                 <section>
                 <h3>Macaulay Honors College at CUNY Queens - NYC</h3>
                 <p>Bachelor of Science - Computer Science | Minor - Mathematics</p>
-                <p></p>
+                <p>2018-2022</p>
                 </section>
                 <!-- End of School block. -->
             </div>
