--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <!----*********** Projects Section ***********--->
         <section class="projects">
             <div class="content-wrap">
+                <h2>Featured Projects</h2><br>
 
                 <div class="project-item">
                     <img src="images/qcfirst.png" alt="Term Project">
